Fixed spacing in activities page

--- a/Things To Do/Activities/actvities.css
+++ b/Things To Do/Activities/actvities.css
@@ -35,8 +35,8 @@
 .activitiesContainerDiv{
     background-color: white;
     min-height: 70vh;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .activitiesBannerDiv {
@@ -48,10 +48,18 @@
 }
 
 .activitiesBannerDivImage {
-  flex: 0 0 46%; /* Fixed 46% width */
+  width: 49%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.activitiesBannerDivContent {
+
+  align-content: center;
+  width: 49%;
+  display: flex;
+  flex-direction: column; /* stack text vertically */
 }
 
 .activitiesBannerDivImage img {
@@ -62,9 +70,7 @@
 }
 
 .activitiesBannerDivContent{
-    padding: 35px;
+    padding-left: 55px;
+    padding-right: 55px;
 }
 
-.activitiesBannerDivContent h2{
-    padding-left: 50px;
-}
